<resources>
    <string name="app_name">UMAPS</string>
    <string name="umaps">UMAPS</string>
    <string name="why">Kenapa</string>
    <string name="why_umaps">UMAPS?</string>
    <string name="easy_to_use">Mudah Digunakan</string>
    <string name="lets_start">Yuk Mulai!</string>
    <string name="start_now">Start Now</string>
    <string name="lost">Kesasar di UMP?\nCek lokasi yuk!</string>
    <string name="sign_up">Google Sign Up</string>
    <string name="default_web_client_id_auth">313033052131-bh81u54j98k9fgbjsmsh3t4rf1ebtnta.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="image_dreamer">Image dreamer</string>
    <string name="lost_in_ump">TERSESAT DI UMP?\nCARI YUK GEDUNGNYA!</string>
    <string name="hello">Halo,\n%1$s!</string>
    <string name="logo_umaps">Logo UMAPS</string>
    <string name="what_are_you_looking_for">MAU CARI APA?</string>
    <string name="faculty">Fakultas</string>
    <string name="building">Gedung</string>
    <string name="about_ump">Tentang UMP</string>
    <string name="menu_about_ump">Menu About UMP</string>
    <string name="menu_building">Menu Building</string>
    <string name="menu_faculty">Menu Faculty</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="background_form">Background Form</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="status_or_working">Status/Pekerjaan</string>
    <string name="register">Daftar</string>
    <string name="edit">Ubah</string>
    <string name="image_data">Image Data</string>
    <string name="image_background_facility">Image Background Facility</string>
    <string name="search_location">Cari Lokasi</string>
    <string name="accompany_the_adventure">Menemani petualangan Anda berkeliling menemukan gedung-gedung Universitas Muhammadiyah Purwokerto tanpa takut tersesat.</string>
    <string name="exclusive_service">Pelayanan ekslusif berbasis lokasi yang akurat dan mudah digunakan.</string>
    <string name="kembali">Kembali</string>
    <string name="button_back">Button Back</string>
    <string name="image_slider">Image Slider</string>
    <string name="profile_ump">Profil\nUniversitas Muhammadiyah Purwokerto</string>
    <string name="logo_ump_purwokerto">Logo UMP Purwokerto</string>
    <string name="content_ump">Universitas Muhammadiyah Purwokerto (UMP) merupakan perguruan tinggi swasta terbesar di Jawa Tengah bagian barat, yang terakreditasi B. UMP secara aktif mengembangkan kerja sama Internasional dengan ratusan perguruan tinggi ternama dunia dalam bidang riset dan peningkatan kualitas sumber daya manusia (SDM). Selain itu, UMP saat ini juga memperkuat kerjasama dalam negeri.</string>
    <string name="connected_to_campus">Terhubung dengan kampus :</string>
    <string name="menu_website">Menu Website</string>
    <string name="website">Website</string>
    <string name="menu_instagram">Menu Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="menu_facebook">Menu facebook</string>
    <string name="facebook">Facebook</string>
    <string name="menu_youtube">Menu Youtube</string>
    <string name="youtube">Youtube</string>
    <string name="are_you_sure">Apakah kamu yakin ingin keluar?</string>
</resources>